# coze-oauth-quickstart

./: .gitignore  README.md  build.sh
.github/workflows/: ci_go.yml  ci_java.yml  ci_python.yml  release.yml
go/: bootstrap.bat  bootstrap.ps1  bootstrap.sh
go/device-oauth/: go.mod  go.sum  main.go
go/device-oauth/src/: go.mod  main.go
go/jwt-oauth/: bootstrap.sh  go.mod  main.go
go/pkce-oauth/: go.mod  go.sum  main.go
go/web-oauth/: go.mod  go.sum  main.go  quickstart.md
java/: README.md  bootstrap.bat  bootstrap.ps1  bootstrap.sh  build.gradle.kts  config.yaml  settings.gradle.kts
java/device-oauth/: README.md  build.gradle.kts  settings.gradle.kts
java/jwt-oauth/: README.md  build.gradle.kts  settings.gradle.kts
java/pkce-oauth/: README.md  build.gradle.kts  settings.gradle.kts
java/web-oauth/: README.md  build.gradle.kts  settings.gradle.kts
nodejs/device-oauth/: index.js  package.json
nodejs/device-ouath/: README.md
nodejs/jwt-oauth/: index.js
nodejs/pkce-oauth/: README.md  index.js  package.json
nodejs/web-oauth/: index.js  package.json
python/: bootstrap.bat
python/device-oauth/: bootstrap.sh  main.py  pyproject.toml  requirements.txt
python/jwt-oauth/: main.py  pyproject.toml  requirements.txt
python/jwt-oauth/src/: main.py
python/pkce-oauth/: bootstrap.sh  main.py  pyproject.toml  requirements.txt
python/pkce-oauth/src/: main.py
python/web-oauth/: bootstrap.sh  main.py  pyproject.toml  requirements.txt
python/web-oauth/src/: main.py
shared/: quickstart.md
shared/websites/: callback.html  error.html  index.html
(+35 files in other folders)
