[project]
name = "coze-jwt-oauth"
version = "0.1.0"
description = "Coze JWT OAuth Quick Start"
requires-python = ">=3.8"
dependencies = [
    "Flask>=3.0.3,<4.0.0",
    "cozepy==0.11.0",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []
